# pushcv-cli

./: .gitignore  .pushcv.json  CONTRIBUTING.md  LICENSE  README.md  flake.nix  profile.example.md  profile.md  pyproject.toml
.github/: FUNDING.yml  dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  release.yml
src/pushcv/: __init__.py  ai_engine.py  config.py  core.py  main.py  models.py  scraper.py  search.py
src/pushcv/portals/: __init__.py  base.py  generic.py  greenhouse.py  lever.py  linkedin.py  smartrecruiters.py
tests/: test_cli.py  test_helpers.py  test_portals.py
